--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -6,4 +6,4 @@ jobs:
       - postecho: |
           sleep 30
           hab install core/jq-static
-      - teardown-sleep: sleep 30
+      #- teardown-sleep: sleep 30
