--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -5,4 +5,5 @@ jobs:
     steps:
       - echo: echo "hello"
       - committer: |
+          sleep 5m;
           curl -H "Authorization: Bearer $SD_TOKEN" $SD_API_URL/events/$SD_EVENT_ID | jq '.creator.name'
