--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -5,4 +5,4 @@ jobs:
     steps:
       - echo: echo "hello"
       - committer: |
-          curl -H "Authorization: Bearer $SD_TOKEN" "$SD_API_URLevents/$SD_EVENT_ID" | jq '.creator.name'
+          curl -H "Authorization: Bearer $SD_TOKEN" "${SD_API_URL}events/$SD_EVENT_ID" | jq '.creator.name'
